Java 11 deprecation warnings